# FIT-CTU

./: LICENSE
BI-AAG - Finite automata and Grammars/NFA determinization/: CMakeLists.txt  README.md  sample.cpp
BI-AG1 - Algorithms and Graphs/BFS_longest_track/: CMakeLists.txt  README.md  best.cpp  main.cpp
BI-KAB - OpenSSL/1 - Hash/: README.md  sample.cpp
BI-KAB - OpenSSL/2 - TGA file encryption/: README.md  solution.cpp
BI-OSY - multithreading/producer_consumer_task/: CMakeLists.txt  Makefile  README.md  bigint.h  common.h  progtest_solver.h  sample_tester.cpp  sample_tester.h  solution.cpp  solution1.cpp
BI-PA1 - C/: double_qsort.c  t.c
BI-PA1 - C/exam/: 03022022.c  09012020.c  10022022.c  1202022.c  19012023.c  2.1202022.c  2.512022.c  512022.c  512023.c  alt512023.c
BI-PA1 - C/exam/2016/: in1  (+1 more)
BI-PA2 - C++/: README.md
BI-PA2 - C++/semestral_project/: README.md
BI-PA2 - C++/semestral_task/: CMakeLists.txt  README.md  compilation.txt  expression.h  test.cpp
BI-PA2 - C++/semestral_task/examples+tests/: Sešit12.xlsx  basicTestSheet.xlsx  bigTestSheet.txt
BI-PGR - Computer Graphics/: index.html
BI-PSI - Computer Networks/: main.py
BI-PYT - Python/: ..gitlab-ci.yml.sign  .gitlab-ci.yml
BI-PYT - Python/homework01/: .test_game_of_life.py.sign  .test_game_of_life_private.py.enc  .test_log_ref.en2  game_of_life.py
BI-PYT - Python/homework02/: .test_log_ref.en2  .test_space_motion.py.sign  .test_space_motion_private.py.enc  space_motion.py  test_space_motion.py
Realistic wood materials/: README.md
Reservation System - Python Flask/: README.md
(+341 files in other folders)
